k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    app.openshift.io/vcs-uri: https://github.com/yasuki0707/fe-stt.git
  labels:
    app: stt-fe
    app.kubernetes.io/instance: stt-fe
    app.kubernetes.io/name: stt-fe
    app.openshift.io/runtime: js
  name: stt-fe
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: stt-fe
      app.kubernetes.io/name: stt-fe
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: stt-fe
        app.kubernetes.io/name: stt-fe
    spec:
      containers:
        - env:
            - name: INGRESS_HOST
            - name: PROTOCOLS
            - name: FE_PROFILE
              value: prod
          image: quay.io/yasuki_oshiro_ibm/fe-stt
          imagePullPolicy: IfNotPresent
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /
          #     port: 3000
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          name: stt-fe
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /
          #     port: http
          #     scheme: HTTP
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: quay-io-stt-fe-password
